// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditQuestion render test question is NOT null 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      title
    </title>
    <meta
      content="content"
      name="description"
    />
  </HelmetWrapper>
  <LoadingIndicator />
</div>
`;

exports[`EditQuestion render test question is null 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Edit question
    </title>
    <meta
      name="description"
    />
  </HelmetWrapper>
  <LoadingIndicator />
</div>
`;

exports[`EditQuestion render test questionLoading is falsy 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      title
    </title>
    <meta
      content="content"
      name="description"
    />
  </HelmetWrapper>
  <Connect(ReduxForm)
    form="app/AskQuestion/EDIT_QUESTION_FORM"
    formTitle="Edit question"
    question={
      Object {
        "content": "content",
        "title": "title",
      }
    }
    sendQuestion={[Function]}
    submitButtonId="app/AskQuestion/EDIT_QUESTION_BUTTON"
    submitButtonName="Save"
    translations={
      Object {
        "app.common.about": "About",
        "app.common.add": "Add",
        "app.common.addQuestion": "Add question",
        "app.common.ago": "ago",
        "app.common.all": "All",
        "app.common.answers": "Answers",
        "app.common.communities": "Communities",
        "app.common.contacts": "Contacts",
        "app.common.edit": "Edit",
        "app.common.faq": "FAQ",
        "app.common.login": "Log in",
        "app.common.logout": "Log out",
        "app.common.myFeed": "My feed",
        "app.common.peerania": "Peerania",
        "app.common.posts": "Posts",
        "app.common.privacyPolicy": "Privacy Policy",
        "app.common.profile": "Profile",
        "app.common.questions": "Questions",
        "app.common.search": "Search",
        "app.common.see": "See",
        "app.common.settings": "Settings",
        "app.common.signUp": "Sign Up",
        "app.common.subscribeMore": "Subscribe more",
        "app.common.support": "Support",
        "app.common.tags": "Tags",
        "app.common.top": "Top",
        "app.common.upload": "Upload",
        "app.common.users": "Users",
        "app.common.you": "You",
        "app.components.Footer.header": "Copyright: Peerania",
        "app.components.FormFields.requiredField": "Required field",
        "app.components.NoAccess.errorMessage": "No access to complete this action!",
        "app.components.RatingStatus.banned": "Banned",
        "app.components.RatingStatus.heroResident": "Hero Resident",
        "app.components.RatingStatus.jrResident": "Junior Resident",
        "app.components.RatingStatus.legResident": "Legendary Resident",
        "app.components.RatingStatus.newbie": "Newbie",
        "app.components.RatingStatus.resident": "Resident",
        "app.components.RatingStatus.srResident": "Senior Resident",
        "app.components.RatingStatus.stranger": "Stranger",
        "app.containers.AskQuestion.description": "Ask question | Description",
        "app.containers.AskQuestion.notEnoughRating": "To complete this action, your rating has to be more than",
        "app.containers.AskQuestion.postQuestion": "Post question",
        "app.containers.AskQuestion.title": "Ask question",
        "app.containers.Communities.description": "Communities | Description",
        "app.containers.Communities.tags": "Tags",
        "app.containers.Communities.title": "Communities",
        "app.containers.CreateCommunity.avatar": "Avatar",
        "app.containers.CreateCommunity.createCommunity": "Create community",
        "app.containers.CreateCommunity.description": "Description of CreateCommunity",
        "app.containers.CreateCommunity.descriptionField": "Description",
        "app.containers.CreateCommunity.name": "Name",
        "app.containers.CreateCommunity.title": "Community | Create",
        "app.containers.CreateTag.createTag": "Create tag",
        "app.containers.CreateTag.description": "Create tag | Description",
        "app.containers.CreateTag.descriptionField": "Description",
        "app.containers.CreateTag.name": "Name",
        "app.containers.CreateTag.title": "Create tag",
        "app.containers.EditAnswer.description": "Edit Answer Description",
        "app.containers.EditAnswer.submitButtonName": "Save",
        "app.containers.EditAnswer.title": "Edit Answer",
        "app.containers.EditQuestion.description": "Edit Question Description",
        "app.containers.EditQuestion.submitButtonName": "Save",
        "app.containers.EditQuestion.title": "Edit question",
        "app.containers.ErrorBoundary.description": "Description of error boundary",
        "app.containers.ErrorBoundary.details": "Details",
        "app.containers.ErrorBoundary.problemWithWebpage": "A problem occurred with this webpage",
        "app.containers.ErrorBoundary.reloadPage": "Reload page",
        "app.containers.ErrorBoundary.title": "Error",
        "app.containers.FormFields.fileSize": "File size is exceeded",
        "app.containers.FormFields.wrongEmail": "Wrong email",
        "app.containers.FormFields.wrongLength15x100": "Value must be at least 15 characters and no longer than 100 characters",
        "app.containers.FormFields.wrongLength1x5": "Value must be at least 1 characters and no longer than 5 characters",
        "app.containers.FormFields.wrongLength20x1000": "Value must be at least 20 characters and no longer than 1000 characters",
        "app.containers.FormFields.wrongLength25x30000": "Value must be at least 25 characters and no longer than 30000 characters",
        "app.containers.FormFields.wrongLength2x15": "Value must be at least 2 characters and no longer than 15 characters",
        "app.containers.FormFields.wrongLength30000": "Maximum number of characters exceeded",
        "app.containers.FormFields.wrongLength3x20": "Value must be at least 3 characters and no longer than 20 characters",
        "app.containers.HomePage.about": "About",
        "app.containers.HomePage.askQuestion": "Ask question",
        "app.containers.HomePage.askQuestionAndGetHelp": "Ask questions and get help from community of experts passionate about the topic. And help thousands of other peers who get answer to the question in minutes instead of hours thanks to your post.",
        "app.containers.HomePage.backendDev": "Back-end developer",
        "app.containers.HomePage.beTheFirst": "Be the first to join and earn up to 100x more rewards",
        "app.containers.HomePage.builtOnSmart": "Built on Smart Contracts and Blockchain",
        "app.containers.HomePage.canIEarn": "Can I earn Crypto Tokens for commenting?",
        "app.containers.HomePage.canIEarnCollapsed": "Can I earn Crypto Tokens for commenting?",
        "app.containers.HomePage.description": "Peerania | Description",
        "app.containers.HomePage.designer": "Designer",
        "app.containers.HomePage.differentThan": "Different than other Question and Answers sites",
        "app.containers.HomePage.earnReputation": "Earn Reputation",
        "app.containers.HomePage.email": "Email",
        "app.containers.HomePage.fairEconomy": "Fair economy where users are paid",
        "app.containers.HomePage.faq": "FAQ",
        "app.containers.HomePage.faqDescription": "Peerania | FAQ Description",
        "app.containers.HomePage.faqTitle": "Peerania | FAQ",
        "app.containers.HomePage.founder": "Founder",
        "app.containers.HomePage.frontendDev": "Front-end developer",
        "app.containers.HomePage.getHelp": "Get Help and Help Others",
        "app.containers.HomePage.getMoreAnswers": "Get more answers",
        "app.containers.HomePage.getPaidInCrypto": "Get Paid in Crypto Token. Token with Value. Residually.",
        "app.containers.HomePage.getPaidInCryptoFromWeekly": "Get paid in crypto from the weekly reward pool for your contributions, asking and answering question. Token can be sold on the open market to users willing to advertise or post job openings on the platform. You continue to be paid for your contributions as long as your content is helpful and being upvoted by the community.",
        "app.containers.HomePage.getReward": "Get Reward",
        "app.containers.HomePage.getStarted": "Get started",
        "app.containers.HomePage.helpCommunity": "Help community by answering question of your peers. Your answer remains there for many others that need the same answer.",
        "app.containers.HomePage.helpfulAndGenerous": "Helpful and generous",
        "app.containers.HomePage.honorableAndFascinating": "Honorable and fascinating",
        "app.containers.HomePage.howToCreateAcc": "How do I create an account?",
        "app.containers.HomePage.howToCreateAccCollapsed": "How do I create an account?",
        "app.containers.HomePage.howToUpvote": "How do I upvote a post or comment?",
        "app.containers.HomePage.howToUpvoteCollapsed": "How do I upvote a post or comment?",
        "app.containers.HomePage.kateBehey": "Kate Behey",
        "app.containers.HomePage.knowledgeSharingEconomy": "Knowledge Sharing Economy",
        "app.containers.HomePage.login": "Log in",
        "app.containers.HomePage.marketing": "Marketing",
        "app.containers.HomePage.message": "Message",
        "app.containers.HomePage.messageHasNotBeenSent": "Something went wrong and your message has not been sent. Please try again.",
        "app.containers.HomePage.nikitaSyr": "Nikita Syrovatnikov",
        "app.containers.HomePage.none": "None",
        "app.containers.HomePage.ourTeam": "Our team",
        "app.containers.HomePage.participateInModeration": "Participate in moderation of the community and help community to thrive. Success of community directly impacts the value of token on the market. Propose, vote for or even build upgrades for the platform. The platform is open source and decentralized. Owned by you and your community.",
        "app.containers.HomePage.platformIsDistributed": "The platform is distributed built on blockchain and IPFS technologies. Platforms rules and economy are built into smart contract.",
        "app.containers.HomePage.platformUnderDeveloping": "The platform is under developing, but you can be the first to join and earn up to 100x more.",
        "app.containers.HomePage.postsOnQA": "Posts on Q&A websites save millions of people many hours of work. We believe that people should be paid for helpful contributions to community.",
        "app.containers.HomePage.practicalAnswers": "Practical Answers and Questions",
        "app.containers.HomePage.profitableAndModern": "Profitable and modern",
        "app.containers.HomePage.review": "Review",
        "app.containers.HomePage.rewards": "Rewards",
        "app.containers.HomePage.rewardsPool": "Rewards pool is distributed weekly between all of the contributors for the given week. Members that join early get higher rewards while community is growing.",
        "app.containers.HomePage.romRem": "Roman Remniov",
        "app.containers.HomePage.ruleThePlatform": "Rule the Platform",
        "app.containers.HomePage.sendMessage": "Send message",
        "app.containers.HomePage.sergeyIlin": "Sergey Ilin",
        "app.containers.HomePage.shareKnowledge": "Share Knowledge",
        "app.containers.HomePage.signUpFree": "Sign up free",
        "app.containers.HomePage.simpleAndAffordable": "Simple and affordable",
        "app.containers.HomePage.sitesAreModerated": "Sites are moderated by community. Only detailed questions and answers to very practical questions are allowed",
        "app.containers.HomePage.subject": "Subject",
        "app.containers.HomePage.systemError": "System error",
        "app.containers.HomePage.team": "Team",
        "app.containers.HomePage.title": "Peerania | Landing",
        "app.containers.HomePage.ulyanaPopova": "Ulyana Popova",
        "app.containers.HomePage.weAppreciate": "We highly appreciate your feedback, opinion or suggestion for the platform. Send us few lines or even better let us know if you have 15 minutes to chat.",
        "app.containers.HomePage.weAreDecentralized": "We are decentralized question and answer platform for professional communities with economy that pays contributors in crypto",
        "app.containers.HomePage.whatIsPeerania": "What is Peerania",
        "app.containers.HomePage.whatIsPeeraniaCollapsed": "What is Peerania",
        "app.containers.HomePage.whatIsReputation": "What is Reputation?",
        "app.containers.HomePage.whatIsReputationCollapsed": "What is Reputation?",
        "app.containers.HomePage.whatToPost": "What can users post to Peerania?",
        "app.containers.HomePage.whatToPostCollapsed": "What can users post to Peerania?",
        "app.containers.HomePage.whetherYouAsk": "Whether you ask or answer questions, all contributions count. Earn reputation and recognition in the community. Unlock new privileges as your reputation grows.",
        "app.containers.HomePage.worthyAndPrestig": "Worthy and prestigious",
        "app.containers.HomePage.yourEmail": "Your email address",
        "app.containers.HomePage.yourEmailIsRegistred": "The platform is under development, but your email is registered. We will send a letter when you can continue registation.",
        "app.containers.HomePage.yourName": "Your name",
        "app.containers.Login.doNotHaveAcc": "Do not have an account?",
        "app.containers.Login.header": "No Peerania account exists for selected identity.",
        "app.containers.Login.loginWithScatter": "Log in with Scatter",
        "app.containers.Login.requirementToSignUp": "Sign Up for Peerania account",
        "app.containers.Login.selectAnotherIdentity": "Select another identity",
        "app.containers.Login.signUp": "Sign up",
        "app.containers.Other.errorMessage": "An error occurred",
        "app.containers.Other.successMessage": "Action has been completed successfully",
        "app.containers.Profile.aboutLabel": "About me",
        "app.containers.Profile.activity": "Activity",
        "app.containers.Profile.answered": "answered",
        "app.containers.Profile.asked": "asked",
        "app.containers.Profile.companyLabel": "Company",
        "app.containers.Profile.displayNameLabel": "Display name",
        "app.containers.Profile.editProfile": "Edit profile",
        "app.containers.Profile.heHasnoAnswersAndQuestions": "He has no answers and questions.",
        "app.containers.Profile.informationIsBlank": "Information about you is currently blank.",
        "app.containers.Profile.lastAnswer": "Last answer",
        "app.containers.Profile.locationLabel": "Location",
        "app.containers.Profile.memberSince": "Member since ",
        "app.containers.Profile.noAnswersYet": "No answers yet",
        "app.containers.Profile.positionLabel": "Position",
        "app.containers.Profile.profile": "Profile",
        "app.containers.Profile.profileDescription": "Profile description",
        "app.containers.Profile.reputation": "Reputation",
        "app.containers.Profile.risen": "Risen",
        "app.containers.Profile.saveButton": "Save",
        "app.containers.Profile.userHasntActivityYet": "This user hasn’t activity yet",
        "app.containers.Profile.wrongUser": "Wrong user",
        "app.containers.QuestionForm.communityLabel": "Community",
        "app.containers.QuestionForm.contentLabel": "Body",
        "app.containers.QuestionForm.tagsLabel": "Tags",
        "app.containers.QuestionForm.title": "Ask question",
        "app.containers.QuestionForm.titleLabel": "Title",
        "app.containers.Questions.ago": "ago",
        "app.containers.Questions.all": "All",
        "app.containers.Questions.answers": "answers",
        "app.containers.Questions.askQuestion": "Ask question",
        "app.containers.Questions.description": "Questions | Description",
        "app.containers.Questions.follow": "Follow",
        "app.containers.Questions.myfeed": "My feed",
        "app.containers.Questions.noQuestions": "No questions",
        "app.containers.Questions.title": "Questions",
        "app.containers.Questions.unfollow": "Unfollow",
        "app.containers.Questions.votes": "votes",
        "app.containers.ScatterInstaller.backToOptions": "Back to options",
        "app.containers.ScatterInstaller.header": "To complete this action in our app you need to install",
        "app.containers.ScatterInstaller.nextstep": "Next step",
        "app.containers.SelectAccount.backToOptions": "Back to options",
        "app.containers.SelectAccount.header": "Scatter account was not selected.",
        "app.containers.SelectAccount.selectIdent": "Select identity",
        "app.containers.SignUp.alreadyHaveAcc": "Already have Peerania account?",
        "app.containers.SignUp.backToSignUpOptions": "Back to Sign Up options",
        "app.containers.SignUp.displayName": "Display Name",
        "app.containers.SignUp.eosAccount": "EOS Account",
        "app.containers.SignUp.identity": "identity",
        "app.containers.SignUp.isAlreadyRegistred": "is already registred",
        "app.containers.SignUp.login": "Log in",
        "app.containers.SignUp.loginWith": "Login with",
        "app.containers.SignUp.or": "or",
        "app.containers.SignUp.selectedIdentity": "Selected identity",
        "app.containers.SignUp.serverMessage": "Error",
        "app.containers.SignUp.signUp": "Sign Up",
        "app.containers.SignUp.signUpDescription": "Description of Sign Up",
        "app.containers.SignUp.signUpWith": "Sign up with Scatter",
        "app.containers.SuggestedCommunities.creatorCannotUpvoteOwnComm": "Creator cannot upvote own community",
        "app.containers.SuggestedCommunities.description": "Suggested communities | Description",
        "app.containers.SuggestedCommunities.noSuggestedCommunities": "There are no suggested communities",
        "app.containers.SuggestedCommunities.title": "Suggested communities",
        "app.containers.SuggestedCommunities.youHaveAlreadyVoted": "You have already voted",
        "app.containers.SuggestedTags.creatorCannotUpvoteOwnComm": "Creator cannot upvote own tag",
        "app.containers.SuggestedTags.description": "Suggested tags | Description",
        "app.containers.SuggestedTags.noSuggestedTags": "There are no suggested tags",
        "app.containers.SuggestedTags.title": "Suggested tags",
        "app.containers.SuggestedTags.youHaveAlreadyVoted": "You have already voted",
        "app.containers.Tags.createTag": "Create tag",
        "app.containers.Tags.description": "Description of Tags",
        "app.containers.Tags.suggestedTags": "Suggested tags",
        "app.containers.Tags.title": "Tags",
        "app.containers.UserProfileNav.profile": "Profile",
        "app.containers.ViewQuestion.alreadyAnswered": "You already answered this question",
        "app.containers.ViewQuestion.answerIsCorrect": "You cannot delete it because your answer is marked as correct",
        "app.containers.ViewQuestion.answers": "answers",
        "app.containers.ViewQuestion.commentButton": "Comment",
        "app.containers.ViewQuestion.deleteButton": "Delete",
        "app.containers.ViewQuestion.description": "Question's description",
        "app.containers.ViewQuestion.editButton": "Edit",
        "app.containers.ViewQuestion.itemsMax": "Number of items is achieved of maximum",
        "app.containers.ViewQuestion.lastEdited": "Last edited",
        "app.containers.ViewQuestion.noRootsToVote": "You cannot vote to own questions and answers",
        "app.containers.ViewQuestion.notEnoughModPoints": "To complete this action, your moderation points rating has to be more than",
        "app.containers.ViewQuestion.notEnoughRating": "To complete this action, your rating has to be more than",
        "app.containers.ViewQuestion.postAnswerButton": "Post answer",
        "app.containers.ViewQuestion.postCommentButton": "Post comment",
        "app.containers.ViewQuestion.questionNotExist": "This question does not exist",
        "app.containers.ViewQuestion.saveButton": "Save",
        "app.containers.ViewQuestion.title": "Question's page",
        "app.containers.ViewQuestion.voteToDelete": "Vote to delete",
        "app.containers.ViewQuestion.youHaveAnswers": "You cannot delete it because you already have some answers by your question",
        "app.containers.ViewQuestion.youVoted": "You have completed this action earlier",
        "app.containers.ViewQuestion.yourAnswer": "Your answer",
      }
    }
  />
</div>
`;

exports[`EditQuestion render test questionLoading is true 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      title
    </title>
    <meta
      content="content"
      name="description"
    />
  </HelmetWrapper>
  <LoadingIndicator />
</div>
`;
